--- a/App/Admin/View/Default/House/edit.html
+++ b/App/Admin/View/Default/House/edit.html
@@ -102,6 +102,12 @@
                     <td width="130" class="title"><input type="text" class="input-text" value="<{$info['weixin_no']}>" name="weixin_no"></td>
                 </tr>
                 <tr class="text-c">
+                    <td width="120" class="title">邮箱图片：</td>
+                    <td colspan="5">
+                        <img src="<{$info['email_img']}>" style="height:40px;">
+                    </td>
+                </tr>
+                <tr class="text-c">
                     <td width="120" class="title">租金（元/周）：</td>
                     <td width="130" >
                         <input type="text" class="input-text" value="<{$info['rent_amount']}>" name="rent_amount">
