--- a/application/admin/view/houses/edit.html
+++ b/application/admin/view/houses/edit.html
@@ -199,11 +199,11 @@
     </div>
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Email')}:</label>
-        <div class="col-xs-10 col-sm-6">
+        <div class="col-xs-5 col-sm-5">
             <input id="c-email" class="form-control" name="row[email]" type="text" value="{$row.email}"> 
         </div>
-        <div class="col-xs-2 col-sm-2">
-            <img src="{$row.email_img}" style="height: 50px;">
+        <div class="col-xs-5 col-sm-5">
+            <img src="{$row.email_img}" style="width: 200px;">
         </div>
     </div>
     <div class="form-group">
