--- a/application/admin/view/houses/edit.html
+++ b/application/admin/view/houses/edit.html
@@ -17,7 +17,7 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Sub_title')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-sub_title" data-rule="required" class="form-control" name="row[sub_title]" type="text" value="{$row.sub_title}">
+            <input id="c-sub_title" class="form-control" name="row[sub_title]" type="text" value="{$row.sub_title}">
         </div>
     </div>
     <div class="form-group">
