--- a/application/admin/view/houses/edit.html
+++ b/application/admin/view/houses/edit.html
@@ -168,7 +168,7 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Can_reside_time')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-can_reside_time" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD" data-use-current="true" name="row[can_reside_time]" type="text" value="{$row.can_reside_time|datetime}">
+            <input id="c-can_reside_time" class="form-control datetimepicker" data-date-format="YYYY-MM-DD" data-use-current="true" name="row[can_reside_time]" type="text" value="{$row.can_reside_time|datetime}">
         </div>
     </div>
     <div class="form-group">
