--- a/application/admin/view/news/add.html
+++ b/application/admin/view/news/add.html
@@ -66,9 +66,21 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">推荐热门小程序:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-is_recommend" name="row[is_recommend]" type="checkbox">&nbsp;&nbsp;是否推荐&nbsp;&nbsp;
-            <input id="c-is_hot" name="row[is_hot]" type="checkbox">&nbsp;&nbsp;是否热门&nbsp;&nbsp;
-            <input id="c-is_applet" name="row[is_applet]" type="checkbox">&nbsp;&nbsp;是否发布到小程序&nbsp;&nbsp;
+            &nbsp;&nbsp;是否推荐&nbsp;&nbsp;
+            <input  id="c-switch" name="row[is_recommend]" type="hidden" value="0">
+            <a href="javascript:;" data-toggle="switcher" class="btn-switcher" data-input-id="c-switch" data-yes="1" data-no="0" >
+                <i class="fa fa-toggle-on text-success fa-flip-horizontal text-gray fa-2x"></i>
+            </a>
+            &nbsp;&nbsp;是否热门&nbsp;&nbsp;
+            <input  id="c-switch" name="row[is_hot]" type="hidden" value="0">
+            <a href="javascript:;" data-toggle="switcher" class="btn-switcher" data-input-id="c-switch" data-yes="1" data-no="0" >
+                <i class="fa fa-toggle-on text-success fa-flip-horizontal text-gray fa-2x"></i>
+            </a>
+            &nbsp;&nbsp;是否发布到小程序&nbsp;&nbsp;
+            <input  id="c-switch" name="row[is_applet]" type="hidden" value="0">
+            <a href="javascript:;" data-toggle="switcher" class="btn-switcher" data-input-id="c-switch" data-yes="1" data-no="0" >
+                <i class="fa fa-toggle-on text-success fa-flip-horizontal text-gray fa-2x"></i>
+            </a>
         </div>
     </div>
     <div class="form-group">
@@ -118,14 +130,8 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('News_picture')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-news_picture" data-rule="required" class="form-control" name="row[news_picture]" type="text">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('News_picture')}:</label>
-        <div class="col-xs-12 col-sm-8">
             <div class="input-group">
-                <input id="c-images" data-rule="required" class="form-control" size="50" name="row[news_picture]" type="text" value="">
+                <input id="c-images" placeholder="请根据布局上传对应数量图片，最多上传三张图片" data-rule="required" class="form-control" size="50" name="row[news_picture]" type="text" value="">
                 <div class="input-group-addon no-border no-padding">
                     <span><button type="button" id="plupload-images" class="btn btn-danger plupload" data-input-id="c-images" data-mimetype="image/gif,image/jpeg,image/png,image/jpg,image/bmp" data-multiple="true" data-preview-id="p-images"><i class="fa fa-upload"></i> {:__('Upload')}</button></span>
                     <span><button type="button" id="fachoose-images" class="btn btn-primary fachoose" data-input-id="c-images" data-mimetype="image/*" data-multiple="true"><i class="fa fa-list"></i> {:__('Choose')}</button></span>
