--- a/application/admin/view/news/edit.html
+++ b/application/admin/view/news/edit.html
@@ -1,39 +1,13 @@
 <form id="edit-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
 
     <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Category_id')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-category_id" data-rule="required" data-source="category/selectpage" data-params='{"custom[type]":"news"}' class="form-control selectpage" name="row[category_id]" type="text" value="{$row.category_id}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Source_id')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-source_id" data-rule="required" data-source="source/index" class="form-control selectpage" name="row[source_id]" type="text" value="{$row.source_id}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Title_tag_id')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-title_tag_id" data-rule="required" data-source="title/tag/index" class="form-control selectpage" name="row[title_tag_id]" type="text" value="{$row.title_tag_id}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('News_tag_id')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-news_tag_id" data-rule="required" data-source="news/tag/index" class="form-control selectpage" name="row[news_tag_id]" type="text" value="{$row.news_tag_id}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Layout_id')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-layout_id" data-rule="required" data-source="layout/index" class="form-control selectpage" name="row[layout_id]" type="text" value="{$row.layout_id}">
-        </div>
-    </div>
-    <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Type_id')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-type_id" data-rule="required" data-source="type/index" class="form-control selectpage" name="row[type_id]" type="text" value="{$row.type_id}">
+            <select class="selectpicker form-control" name="row[type_id]">
+                {volist name="types" id="vo"}
+                <option value="{$key}" {if condition="$key == $row['type_id']"}selected="selected"{/if}>{$vo}</option>
+                {/volist}
+            </select>
         </div>
     </div>
     <div class="form-group">
@@ -43,21 +17,97 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('News_picture')}:</label>
+        <label class="control-label col-xs-12 col-sm-2">{:__('Category_id')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-news_picture" data-rule="required" class="form-control" name="row[news_picture]" type="text" value="{$row.news_picture}">
+            <select class="selectpicker form-control" name="row[category_id]">
+                {volist name="categories" id="vo"}
+                <option value="{$key}" {if condition="$key == $row['category_id']"}selected="selected"{/if}>{$vo}</option>
+                {/volist}
+            </select>
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('News_image')}:</label>
+        <label class="control-label col-xs-12 col-sm-2">{:__('Source_id')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <textarea id="c-news_image" data-rule="required" class="form-control " rows="5" name="row[news_image]" cols="50">{$row.news_image}</textarea>
+            <input id="c-source_id" data-rule="required" data-field="source_name" data-source="news.source/selectpage" class="form-control selectpage" name="row[source_id]" type="text" value="{$row.source_id}">
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Content')}:</label>
+        <label class="control-label col-xs-12 col-sm-2">{:__('Layout_id')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <textarea id="c-content" data-rule="required" class="form-control editor" rows="5" name="row[content]" cols="50">{$row.content}</textarea>
+            <select class="selectpicker form-control" name="row[layout_id]">
+                {volist name="layouts" id="vo"}
+                <option value="{$key}" {if condition="$key == $row['layout_id']"}selected="selected"{/if}>{$vo}</option>
+                {/volist}
+            </select>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Title_tag_id')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-title_tag_id" data-rule="required" data-field="tag_name" data-page-size="15" data-source="news.tag/selectpage" class="form-control selectpage" name="row[title_tag_id]" type="text" value="{$row.title_tag_id}">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('News_tag_id')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-news_tag_id" data-rule="required" data-field="tag_name" data-page-size="15" data-source="news.tag/selectpage" class="form-control selectpage" name="row[news_tag_id]" type="text" value="{$row.news_tag_id}">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Is_valid')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <select name="row[is_valid]" class="selectpicker form-control">
+                {volist name="isValidList" id="vo"}
+                    <option value="{$key}" {if condition="$key == $row['is_valid']"}selected="selected"{/if}>{$vo}</option>
+                {/volist}
+            </select>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">推荐热门小程序:</label>
+        <div class="col-xs-12 col-sm-8">
+            &nbsp;&nbsp;是否推荐&nbsp;&nbsp;
+            <input  id="c-is_recommend" name="row[is_recommend]" type="hidden" value="{$row.is_recommend}">
+            <a href="javascript:;" data-toggle="switcher" class="btn-switcher" data-input-id="c-is_recommend" data-yes="1" data-no="0" >
+                <i class="fa fa-toggle-on text-success {eq name="$row.is_recommend" value="0"}fa-flip-horizontal text-gray{/eq} fa-2x"></i>
+            </a>
+            &nbsp;&nbsp;是否热门&nbsp;&nbsp;
+            <input  id="c-is_hot" name="row[is_hot]" type="hidden" value="{$row.is_hot}">
+            <a href="javascript:;" data-toggle="switcher" class="btn-switcher" data-input-id="c-is_hot" data-yes="1" data-no="0" >
+                <i class="fa fa-toggle-on text-success {eq name="$row.is_hot" value="0"}fa-flip-horizontal text-gray{/eq} fa-2x"></i>
+            </a>
+            &nbsp;&nbsp;是否发布到小程序&nbsp;&nbsp;
+            <input  id="c-is_applet" name="row[is_applet]" type="hidden" value="{$row.is_applet}">
+            <a href="javascript:;" data-toggle="switcher" class="btn-switcher" data-input-id="c-is_applet" data-yes="1" data-no="0" >
+                <i class="fa fa-toggle-on text-success {eq name="$row.is_applet" value="0"}fa-flip-horizontal text-gray{/eq} fa-2x"></i>
+            </a>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">是否置顶:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-is_top_no" name="row[is_top]" type="radio" value="0"  {if condition="$row.is_top == 0"}checked="checked"{/if}>&nbsp;&nbsp;否&nbsp;&nbsp;
+            <input id="c-is_top_yes" name="row[is_top]" type="radio" value="1" {if condition="$row.is_top == 1"}checked="checked"{/if}>&nbsp;&nbsp;是&nbsp;&nbsp;
+            <input id="c-top_end_date" style="display:none" class="datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[top_end_date]" type="text" placeholder="置顶到期时间" value="{$row.top_end_date}">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">定时发布:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-is_publish_no" name="row[is_publish]" type="radio" value="0" checked="checked">&nbsp;&nbsp;否&nbsp;&nbsp;
+            <input id="c-is_publish_yes" name="row[is_publish]" type="radio" value="1">&nbsp;&nbsp;是&nbsp;&nbsp;
+            <input id="c-publish_time" style="display:none" class="datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[publish_time]" type="text" placeholder="请选择发布时间" value="{$row.publish_time}">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Declare_id')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <select class="selectpicker form-control" name="row[declare_id]">
+                {volist name="declareList" id="vo"}
+                <option value="{$key}" {if condition="$key == $row['declare_id']"}selected="selected"{/if}>{$vo}</option>
+                {/volist}
+            </select>
         </div>
     </div>
     <div class="form-group">
@@ -79,111 +129,23 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Declare_id')}:</label>
+        <label class="control-label col-xs-12 col-sm-2">{:__('News_picture')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-declare_id" data-rule="required" data-source="declare/index" class="form-control selectpage" name="row[declare_id]" type="text" value="{$row.declare_id}">
+            <div class="input-group">
+                <input id="c-images" placeholder="请根据布局上传对应数量图片，最多上传三张图片" data-rule="required" class="form-control" size="50" name="row[news_picture]" type="text" value="{$row.news_picture}">
+                <div class="input-group-addon no-border no-padding">
+                    <span><button type="button" id="plupload-images" class="btn btn-danger plupload" data-input-id="c-images" data-mimetype="image/gif,image/jpeg,image/png,image/jpg,image/bmp" data-multiple="true" data-preview-id="p-images"><i class="fa fa-upload"></i> {:__('Upload')}</button></span>
+                    <span><button type="button" id="fachoose-images" class="btn btn-primary fachoose" data-input-id="c-images" data-mimetype="image/*" data-multiple="true"><i class="fa fa-list"></i> {:__('Choose')}</button></span>
+                </div>
+                <span class="msg-box n-right" for="c-images"></span>
+            </div>
+            <ul class="row list-inline plupload-preview" id="p-images"></ul>
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Is_valid')}:</label>
+        <label class="control-label col-xs-12 col-sm-2">{:__('Content')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-is_valid" data-rule="required" class="form-control" name="row[is_valid]" type="number" value="{$row.is_valid}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Is_recommend')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-is_recommend" data-rule="required" class="form-control" name="row[is_recommend]" type="number" value="{$row.is_recommend}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Is_hot')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-is_hot" data-rule="required" class="form-control" name="row[is_hot]" type="number" value="{$row.is_hot}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Read_count')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-read_count" data-rule="required" class="form-control" name="row[read_count]" type="number" value="{$row.read_count}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Read_count_share')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-read_count_share" data-rule="required" class="form-control" name="row[read_count_share]" type="number" value="{$row.read_count_share}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Like_count')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-like_count" data-rule="required" class="form-control" name="row[like_count]" type="number" value="{$row.like_count}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Discuss_count')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-discuss_count" data-rule="required" class="form-control" name="row[discuss_count]" type="number" value="{$row.discuss_count}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Send_5xini')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-send_5xini" data-rule="required" class="form-control" name="row[send_5xini]" type="number" value="{$row.send_5xini}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Is_top')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-is_top" data-rule="required" class="form-control" name="row[is_top]" type="number" value="{$row.is_top}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Top_end_date')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-top_end_date" data-rule="required" class="form-control" name="row[top_end_date]" type="number" value="{$row.top_end_date}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Add_time')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-add_time" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[add_time]" type="text" value="{$row.add_time|datetime}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Add_uid')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-add_uid" data-rule="required" class="form-control" name="row[add_uid]" type="number" value="{$row.add_uid}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Is_applet')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-is_applet" data-rule="required" class="form-control" name="row[is_applet]" type="number" value="{$row.is_applet}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Is_delete')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-is_delete" data-rule="required" class="form-control" name="row[is_delete]" type="number" value="{$row.is_delete}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Delete_time')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-delete_time" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[delete_time]" type="text" value="{$row.delete_time|datetime}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Is_publish')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-is_publish" data-rule="required" class="form-control" name="row[is_publish]" type="number" value="{$row.is_publish}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Publish_time')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-publish_time" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[publish_time]" type="text" value="{$row.publish_time|datetime}">
+            <textarea id="c-content" data-rule="required" class="form-control editor" rows="5" name="row[content]" cols="50">{$row.content}</textarea>
         </div>
     </div>
     <div class="form-group layer-footer">
