--- a/application/admin/view/news/add.html
+++ b/application/admin/view/news/add.html
@@ -1,5 +1,15 @@
 <form id="add-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
     <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">微信采集：</label>
+        <div class="col-xs-10 col-sm-8">
+            <input class="form-control" placeholder="请输入微信文章地址" type="text" id="wx_url">
+        </div>
+        <div class="col-xs-2 col-sm-2">
+            <input type="button" class="btn btn-default" value="采集" id="collect">
+        </div>
+    </div>
+    
+    <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Type_id')}:</label>
         <div class="col-xs-12 col-sm-8">
             <select class="selectpicker form-control" name="row[type_id]">
