--- a/application/admin/view/news/edit.html
+++ b/application/admin/view/news/edit.html
@@ -89,7 +89,7 @@
         <div class="col-xs-12 col-sm-8">
             <input id="c-is_top_no" name="row[is_top]" type="radio" value="0"  {if condition="$row.is_top == 0"}checked="checked"{/if}>&nbsp;&nbsp;否&nbsp;&nbsp;
             <input id="c-is_top_yes" name="row[is_top]" type="radio" value="1" {if condition="$row.is_top == 1"}checked="checked"{/if}>&nbsp;&nbsp;是&nbsp;&nbsp;
-            <input id="c-top_end_date" {empty name="row.top_end_date"}style="display:none"{/empty} class="datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[top_end_date]" type="text" placeholder="置顶到期时间" value="{$row.top_end_date}">
+            <input id="c-top_end_date" {empty name="row.is_top"}style="display:none"{/empty} class="datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[top_end_date]" type="text" placeholder="置顶到期时间" value="{$row.top_end_date}">
         </div>
     </div>
     <div class="form-group">
@@ -97,7 +97,7 @@
         <div class="col-xs-12 col-sm-8">
             <input id="c-is_publish_no" name="row[is_publish]" type="radio" value="0" {if condition="$row.is_publish eq 0"}checked="checked"{/if}>&nbsp;&nbsp;否&nbsp;&nbsp;
             <input id="c-is_publish_yes" name="row[is_publish]" type="radio" value="1" {if condition="$row.is_publish eq 1"}checked="checked"{/if}>&nbsp;&nbsp;是&nbsp;&nbsp;
-            <input id="c-publish_time" {empty name="row.publish_time"}style="display:none"{/empty} class="datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[publish_time]" type="text" placeholder="请选择发布时间" value="{$row.publish_time}">
+            <input id="c-publish_time" {empty name="row.is_publish"}style="display:none"{/empty} class="datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[publish_time]" type="text" placeholder="请选择发布时间" value="{$row.publish_time}">
         </div>
     </div>
     <div class="form-group">
