--- a/application/admin/view/news/edit.html
+++ b/application/admin/view/news/edit.html
@@ -45,13 +45,13 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Title_tag_id')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-title_tag_id" data-rule="required" data-field="tag_name" data-page-size="15" data-source="news.tag/selectpage" class="form-control selectpage" name="row[title_tag_id]" type="text" value="{$row.title_tag_id}">
+            <input id="c-title_tag_id"  data-field="tag_name" data-page-size="15" data-source="news.tag/selectpage" class="form-control selectpage" name="row[title_tag_id]" type="text" value="{$row.title_tag_id}">
         </div>
     </div>
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('News_tag_id')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-news_tag_id" data-rule="required" data-field="tag_name" data-page-size="15" data-source="news.tag/selectpage" class="form-control selectpage" name="row[news_tag_id]" type="text" value="{$row.news_tag_id}">
+            <input id="c-news_tag_id" data-field="tag_name" data-page-size="15" data-source="news.tag/selectpage" class="form-control selectpage" name="row[news_tag_id]" type="text" value="{$row.news_tag_id}">
         </div>
     </div>
     <div class="form-group">
