--- a/application/admin/command/Api/template/index.html
+++ b/application/admin/command/Api/template/index.html
@@ -106,7 +106,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="https://www.fastadmin.net" target="_blank">{$config.title}</a>
+                    <!--<a class="navbar-brand" href="https://www.fastadmin.net" target="_blank">{$config.title}</a>-->
                 </div>
                 <div class="navbar-collapse collapse">
                     <form class="navbar-form navbar-right">
