--- a/application/admin/view/news/add.html
+++ b/application/admin/view/news/add.html
@@ -128,13 +128,13 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Search_key')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-search_key" data-rule="required" class="form-control" name="row[search_key]" type="text">
+            <input id="c-search_key" class="form-control" name="row[search_key]" type="text">
         </div>
     </div>
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Remark')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-remark" data-rule="required" class="form-control" name="row[remark]" type="text">
+            <input id="c-remark" class="form-control" name="row[remark]" type="text">
         </div>
     </div>
     <div class="form-group">
