--- a/application/admin/view/news/edit.html
+++ b/application/admin/view/news/edit.html
@@ -119,13 +119,13 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Search_key')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-search_key" data-rule="required" class="form-control" name="row[search_key]" type="text" value="{$row.search_key}">
+            <input id="c-search_key" class="form-control" name="row[search_key]" type="text" value="{$row.search_key}">
         </div>
     </div>
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Remark')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-remark" data-rule="required" class="form-control" name="row[remark]" type="text" value="{$row.remark}">
+            <input id="c-remark" class="form-control" name="row[remark]" type="text" value="{$row.remark}">
         </div>
     </div>
     <div class="form-group">
