--- a/application/admin/view/news/edit.html
+++ b/application/admin/view/news/edit.html
@@ -54,7 +54,7 @@
             <input id="c-news_tag_id" data-field="tag_name" data-page-size="15" data-source="news.tag/selectpage" class="form-control selectpage" name="row[news_tag_id]" type="text" value="{$row.news_tag_id}">
         </div>
     </div>
-    <div class="form-group">
+<!--    <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">推荐热门小程序:</label>
         <div class="col-xs-12 col-sm-8">
             &nbsp;&nbsp;是否推荐&nbsp;&nbsp;
@@ -73,23 +73,23 @@
                 <i class="fa fa-toggle-on text-success {eq name="$row.is_applet" value="0"}fa-flip-horizontal text-gray{/eq} fa-2x"></i>
             </a>
         </div>
-    </div>
-    <div class="form-group">
+    </div>-->
+<!--    <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">是否置顶:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-is_top_no" name="row[is_top]" type="radio" value="0"  {if condition="$row.is_top == 0"}checked="checked"{/if}>&nbsp;&nbsp;否&nbsp;&nbsp;
             <input id="c-is_top_yes" name="row[is_top]" type="radio" value="1" {if condition="$row.is_top == 1"}checked="checked"{/if}>&nbsp;&nbsp;是&nbsp;&nbsp;
             <input id="c-top_end_date" {empty name="row.is_top"}style="display:none"{/empty} class="datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[top_end_date]" type="text" placeholder="置顶到期时间" value="{$row.top_end_date}">
         </div>
-    </div>
-    <div class="form-group">
+    </div>-->
+<!--    <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">定时发布:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-is_publish_no" name="row[is_publish]" type="radio" value="0" {if condition="$row.is_publish eq 0"}checked="checked"{/if}>&nbsp;&nbsp;否&nbsp;&nbsp;
             <input id="c-is_publish_yes" name="row[is_publish]" type="radio" value="1" {if condition="$row.is_publish eq 1"}checked="checked"{/if}>&nbsp;&nbsp;是&nbsp;&nbsp;
             <input id="c-publish_time" {empty name="row.is_publish"}style="display:none"{/empty} class="datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[publish_time]" type="text" placeholder="请选择发布时间" value="{$row.publish_time}">
         </div>
-    </div>
+    </div>-->
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Declare_id')}:</label>
         <div class="col-xs-12 col-sm-8">
@@ -139,8 +139,7 @@
             <textarea id="c-content" data-rule="required" class="form-control editor" rows="5" name="row[content]" cols="50">{$row.content}</textarea>
         </div>
     </div>
-    <div id="contentDiv" style="display:none">
-    </div>
+    <div id="contentDiv" style="display:none">{$row.content}</div>
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
         <div class="col-xs-12 col-sm-8">
