--- a/application/admin/view/live/edit.html
+++ b/application/admin/view/live/edit.html
@@ -92,7 +92,7 @@
             <ul class="row list-inline plupload-preview" id="p-images"></ul>
         </div>
     </div>
-    <div class="form-group">
+<!--    <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
         <div class="col-xs-12 col-sm-8">
             <select class="selectpicker form-control" name="row[status]">
@@ -101,8 +101,8 @@
                 {/volist}
             </select>
         </div>
-    </div>
-    <div class="form-group">
+    </div>-->
+<!--    <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Is_top')}:</label>
         <div class="col-xs-12 col-sm-8">
             <select class="selectpicker form-control" name="row[is_top]" id="is_top">
@@ -117,7 +117,7 @@
         <div class="col-xs-12 col-sm-8">
             <input id="c-top_end_date" data-rule="required" class="form-control datetimepicker" data-use-current="true" data-date-format="YYYY-MM-DD" name="row[top_end_date]" value="{$row.top_end_date|datetime}">
         </div>
-    </div>
+    </div>-->
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Is_ensure')}:</label>
         <div class="col-xs-12 col-sm-8">
