--- a/application/admin/view/news/edit.html
+++ b/application/admin/view/news/edit.html
@@ -150,6 +150,16 @@
             </select>
         </div>
     </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Add_uid')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <select class="selectpicker form-control" name="row[add_uid]">
+                {volist name="admin_ids" id="vo"}
+                <option value="{$key}" {if condition="$key == $row['add_uid']"}selected="selected"{/if}>{$vo}</option>
+                {/volist}
+            </select>
+        </div>
+    </div>
     <div class="form-group layer-footer">
         <label class="control-label col-xs-12 col-sm-2"></label>
         <div class="col-xs-12 col-sm-8">
