--- a/application/admin/view/common/header.html
+++ b/application/admin/view/common/header.html
@@ -37,6 +37,7 @@
                         <li><a href="javascript:;" data-type="content"><i class="fa fa-file-text"></i> {:__('Wipe content cache')}</a></li>
                         <li><a href="javascript:;" data-type="template"><i class="fa fa-file-image-o"></i> {:__('Wipe template cache')}</a></li>
                         <li><a href="javascript:;" data-type="addons"><i class="fa fa-rocket"></i> {:__('Wipe addons cache')}</a></li>
+                        <li><a href="javascript:;" data-type="sync"><i class="fa fa-rocket"></i> {:__('Sync')}</a></li>
                     </ul>
                 </li>
 
