--- a/application/admin/view/live/index.html
+++ b/application/admin/view/live/index.html
@@ -31,3 +31,15 @@
         </div>
     </div>
 </div>
+<script id="categorytpl" type="text/html">
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="form-inline" data-toggle="cxselect" data-selects="city,category">
+                <select class="city form-control" name="live.city_id" data-url="ajax/getAllCity"></select>
+                <select class="category form-control" name="category_id" data-url="ajax/getLiveCategory" data-query-name="city_id"></select>
+                <input type="hidden" class="operate" data-name="live.city_id" value="=" />
+                <input type="hidden" class="operate" data-name="category_id" value="=" />
+            </div>
+        </div>
+    </div>
+</script>
