--- a/application/admin/view/live/edit.html
+++ b/application/admin/view/live/edit.html
@@ -1,5 +1,13 @@
 <form id="edit-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
     <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Mem_id')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-mem_id" class="col-xs-4" data-rule="required" name="row[mem_id]" type="text" value="{$row.mem_id}" style="height: 31px;padding: 6px 12px;font-size: 12px;line-height: 1.42857143;color: #555555;background-color: #fff;background-image: none;border: 1px solid #ccc;">
+            <label class="control-label col-xs-3">{:__('Mem_nickname')}:</label>
+            <input id="c-mem_nickname" class="col-xs-5" readonly="readonly" type="text" value="{$row.member.nick_name}" style="height: 31px;padding: 6px 12px;font-size: 12px;line-height: 1.42857143;color: #555555;background-color: #fff;background-image: none;border: 1px solid #ccc;background-color: #eeeeee;opacity: 1;">
+        </div>
+    </div>
+    <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Title')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-title" data-rule="required" class="form-control" name="row[title]" type="text" value="{$row.title}">
@@ -28,7 +36,7 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Mobile')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-mobile" data-rule="required" class="form-control" name="row[mobile]" type="text" value="{$row.mobile}">
+            <input id="c-mobile" class="form-control" name="row[mobile]" type="text" value="{$row.mobile}">
         </div>
     </div>
     <div class="form-group">
@@ -102,7 +110,7 @@
             </select>
         </div>
     </div>-->
-<!--    <div class="form-group">
+    <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Is_top')}:</label>
         <div class="col-xs-12 col-sm-8">
             <select class="selectpicker form-control" name="row[is_top]" id="is_top">
@@ -117,7 +125,7 @@
         <div class="col-xs-12 col-sm-8">
             <input id="c-top_end_date" data-rule="required" class="form-control datetimepicker" data-use-current="true" data-date-format="YYYY-MM-DD" name="row[top_end_date]" value="{$row.top_end_date|datetime}">
         </div>
-    </div>-->
+    </div>
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Is_ensure')}:</label>
         <div class="col-xs-12 col-sm-8">
